--- a/popup.html
+++ b/popup.html
@@ -12,10 +12,12 @@
 <body>
     <div class="container">
         <h1>LeetCode Manager</h1>
-        <div class="buttons">
-            <button class="button" id="addProblemBtn">Add Problem</button>
-            <button class="button" id="manageProblemsBtn">Manage Problems</button>
-        </div>
+    </div>
+    <div class="buttons">
+        <button class="button" id="addProblemBtn">Add Problem</button>
+        <button class="button" id="manageProblemsBtn">Manage Problems</button>
+    </div>
+    <div class="list-container">
         <ul id="problemList">Problem-List : </ul>
     </div>
     <script src="popup.js"></script>
