--- a/popup.html
+++ b/popup.html
@@ -18,9 +18,9 @@
         <button class="button" id="manageProblemsBtn">Manage Problems</button>
     </div>
     <div class="list-container">
-        <ul id="problemList">Problem-List : </ul>
+        <ul id="problemList"></ul>
     </div>
-    <script src="popup.js"></script>
+    <script type="module" src="popup.js"></script>
 </body>
 
 </html>
