Append sheet Required , Creation and Addition Into New sheets working fine

--- a/popup.html
+++ b/popup.html
@@ -15,7 +15,7 @@
     </div>
     <div class="buttons">
         <button class="button" id="addProblemBtn">Add Problem</button>
-        <button class="button" id="manageProblemsBtn">Manage Problems</button>
+        <button class="button" id="manageProblemsBtn">Generate Excel</button>
     </div>
     <div class="list-container">
         <ul id="problemList"></ul>
