--- a/popup.html
+++ b/popup.html
@@ -1,4 +1,3 @@
-<!-- popup.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -19,6 +18,12 @@
     </div>
     <div class="list-container">
         <ul id="problemList"></ul>
+    </div>
+    <div class="google-btn" id="gbutton">
+        <div class="google-icon-wrapper">
+            <img class="google-icon" src="https://www.w3schools.com/images/lamp.jpg" />
+        </div>
+        <p class="btn-text"><b>Sign in with google</b></p>
     </div>
     <script type="module" src="popup.js"></script>
 </body>
